Added compatibily page for 3.x

--- a/Resources.ipynb
+++ b/Resources.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8b4a2c2e34ca8999c1c930633c08d95e03f9aced306d36b7a53d17bdfe62181f"
+  "signature": "sha256:80e626b8af27483e61f5428a84d9a817b374cad6dbb7319dc0ec961fe8ec99cd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -53,12 +53,21 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Compatibility:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Cause we all want to migrate to 3.x\n",
+      "\n",
+      "http://python3wos.appspot.com/"
+     ]
     }
    ],
    "metadata": {}
