Added mobile development links.

--- a/Resources.ipynb
+++ b/Resources.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:80e626b8af27483e61f5428a84d9a817b374cad6dbb7319dc0ec961fe8ec99cd"
+  "signature": "sha256:2d32407cf0f816cf770e98191a206f63b6cbccef1eefb49639d272407fb91b9d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,7 @@
       "\n",
       "https://docs.djangoproject.com/en/1.4/intro/tutorial01/\n",
       "\n",
-      "Do the Microblog\n",
+      "Do the Microblog [Video]\n",
       "\n",
       "http://gettingstartedwithdjango.com/"
      ]
@@ -67,6 +67,43 @@
       "Cause we all want to migrate to 3.x\n",
       "\n",
       "http://python3wos.appspot.com/"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Mobile Development Resources:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Comparison of Titanium vs PhoneGap\n",
+      "\n",
+      "http://kevinwhinnery.com/post/22764624253/comparing-titanium-and-phonegap\n",
+      "\n",
+      "Titanium Source Code\n",
+      "\n",
+      "https://github.com/appcelerator/titanium_mobile\n",
+      "\n",
+      "Titanium Documentation\n",
+      "\n",
+      "https://wiki.appcelerator.org/display/guides2/Home\n",
+      "\n",
+      "Titanium Hello World\n",
+      "\n",
+      "http://randikastitaniumtutorial.blogspot.com/2013/04/introduction-to-appcelerator-titanium_10.html\n",
+      "\n",
+      "Learn how to create and test your first Appcelerator app using both Titanium Studio and the Titanium CLI [Video]\n",
+      "\n",
+      "http://vimeo.com/91954393\n",
+      "\n",
+      "Titanium using the Command Line Interface (CLI) [Video]\n",
+      "\n",
+      "http://vimeo.com/52734103"
      ]
     }
    ],
