Add mobile auth tutorials

--- a/Resources.ipynb
+++ b/Resources.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2d32407cf0f816cf770e98191a206f63b6cbccef1eefb49639d272407fb91b9d"
+  "signature": "sha256:f64acb21110b5c632e40d211457cb1afd33321830a7601bb5daa389a61d8e849"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -103,7 +103,12 @@
       "\n",
       "Titanium using the Command Line Interface (CLI) [Video]\n",
       "\n",
-      "http://vimeo.com/52734103"
+      "http://vimeo.com/52734103\n",
+      "\n",
+      "Titanium User Authentication: Part 1\n",
+      "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-1--mobile-3728\n",
+      "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-2--mobile-3742\n",
+      "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-3--mobile-3840\n"
      ]
     }
    ],
