--- a/Resources.ipynb
+++ b/Resources.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f64acb21110b5c632e40d211457cb1afd33321830a7601bb5daa389a61d8e849"
+  "signature": "sha256:0546b1aeea6e287edbbafab385fb6868d2a7e6acf171251bd00502d222097bf8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,14 +42,32 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Libraries:"
+      "Django Libraries:"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "http://www.django-rest-framework.org/"
+      "Django REST Framework (Django \"Batteries Included\" API Framework)\n",
+      "\n",
+      "http://www.django-rest-framework.org/\n",
+      "\n",
+      "Mazzanine (Django Content Management System)\n",
+      "\n",
+      "http://mezzanine.jupo.org/\n",
+      "\n",
+      "Mazzanine (Django Content Management System) - Source Code\n",
+      "\n",
+      "https://github.com/stephenmcd/mezzanine\n",
+      "\n",
+      "Drum (Django Sample Reddit / Hacker News clone) - Source Code\n",
+      "\n",
+      "https://github.com/stephenmcd/drum\n",
+      "\n",
+      "Drum (Django Sample Reddit / Hacker News clone) - Demo\n",
+      "\n",
+      "http://drum.jupo.org/"
      ]
     },
     {
@@ -106,10 +124,21 @@
       "http://vimeo.com/52734103\n",
       "\n",
       "Titanium User Authentication: Part 1\n",
+      "\n",
       "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-1--mobile-3728\n",
+      "\n",
       "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-2--mobile-3742\n",
+      "\n",
       "http://code.tutsplus.com/tutorials/titanium-user-authentication-part-3--mobile-3840\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
